--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,9 +25,12 @@
         Professional Institut – LPIC-1. Die App enthaelt momentan die beiden
         LPIC-1 teile: LPIC-1 101 und LPIC-1 102. Sie gelangen zum gewünschten
         Katalog, indem Sie links auf das entsprechende Bild klicken.
-        Standardmäßig wird der Fragenkatalog LPIC-1 101 geladen
+        <span class="bold"
+          >Standardmäßig wird der Fragenkatalog LPIC-1 101 geladen.</span
+        >
       </p>
       <div
+        style="cursor: pointer"
         routerLink="../learn-modus/single-modus/1"
         class="border border-2 zoom mt-3"
       >
@@ -40,7 +43,11 @@
         </p>
       </div>
 
-      <div routerLink="../check-modus/1" class="border border-2 zoom mt-3">
+      <div
+        style="cursor: pointer"
+        routerLink="../check-modus/1"
+        class="border border-2 zoom mt-3"
+      >
         <p class="fw-bold ms-2 mt-2">Check Modus</p>
         <p class="lh-lg justify">
           Wählen Sie Check Modus wenn Sie Ihre gewonnenen Wissens überrüfungen
@@ -49,7 +56,11 @@
           antworten oder überspringen.
         </p>
       </div>
-      <div routerLink="../exam-modus/" class="border border-2 zoom mt-3">
+      <div
+        style="cursor: pointer"
+        routerLink="../exam-modus/"
+        class="border border-2 zoom mt-3"
+      >
         <p class="fw-bold ms-2 mt-2">Exam Modus</p>
         <p class="lh-lg justify">
           Der Exam-Modus entspricht dem Modus des lpisim, Die Fragen werden
