--- a/src/app/check-modus/check-modus.component.html
+++ b/src/app/check-modus/check-modus.component.html
@@ -31,7 +31,10 @@
     >
       <use xlink:href="#info-fill" />
     </svg>
-    <div>You are working on the <span class="bold"> {{getQuestionListName()}} </span></div>
+    <div>
+      You are working on the
+      <span class="bold"> {{ getQuestionListName() }} </span>
+    </div>
   </div>
 
   <div class="card mt-3" *ngIf="question">
@@ -87,8 +90,8 @@
       </li>
     </ul>
 
-    <div class="row justify-content-between">
-      <div class="col-2 ms-3">
+    <div class="d-flex justify-content-between mt-3">
+      <div class="col d-flex justify-content-start ms-3">
         <button
           type="button"
           class="btn btn-outline-danger mt-3 mb-3"
@@ -106,7 +109,7 @@
           Sumbit
         </button>
       </div>
-      <div class="col-1">
+      <div class="col d-flex justify-content-end me-3">
         <button
           type="button"
           class="btn btn-outline-info mt-3 mb-3"
