--- a/src/app/exam-modus/exam-modus.component.html
+++ b/src/app/exam-modus/exam-modus.component.html
@@ -31,7 +31,10 @@
     >
       <use xlink:href="#info-fill" />
     </svg>
-    <div>You are working on the <span class="bold"> {{getQuestionListName()}} </span></div>
+    <div>
+      You are working on the
+      <span class="bold"> {{ getQuestionListName() }} </span>
+    </div>
   </div>
 
   <div class="card mt-3" *ngIf="question && questions">
@@ -111,7 +114,7 @@
           Next
         </button>
       </div>
-      <div class="col-1">
+      <div class="col-1 me-2">
         <button
           type="button"
           class="btn btn-outline-danger mt-3 mb-3"
