--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="nvbar navbar navbar-expand-lg navbar-light bg-light mb-3">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
   <div class="container">
     <a class="navbar-brand">
       <img
@@ -8,43 +8,32 @@
         height="30"
         class="d-inline-block align-text-top"
       />
-      LPIC 1 LCE App</a
-    >
+      LPIC 1 LCE App
+    </a>
     <button
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
-      data-bs-target="#navbarTogglerDemo02"
-      aria-controls="navbarTogglerDemo02"
+      data-bs-target="#navbarTogglerDemo03"
+      aria-controls="navbarTogglerDemo03"
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="d-flex"></div>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link rounded-pill menu-item" routerLink="/home"
-            >Startseite</a
-          >
+          <a class="nav-link rounded-pill menu-item" routerLink="/home">Startseite</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a
-            class="nav-link rounded-pill menu-item"
-            routerLink="learn-modus/single-modus/1"
-            >Learn Modus</a
-          >
+          <a class="nav-link rounded-pill menu-item" routerLink="learn-modus/single-modus/1">Learn Modus</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link rounded-pill menu-item" routerLink="check-modus/1"
-            >Check Modus</a
-          >
+          <a class="nav-link rounded-pill menu-item" routerLink="/check-modus/1">Check Modus</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link rounded-pill menu-item" routerLink="/exam-modus"
-            >Exam Modus</a
-          >
+          <a class="nav-link rounded-pill menu-item" routerLink="/exam-modus">Exam Modus</a>
         </li>
       </ul>
     </div>
